# reth

./: Cargo.toml
crates/evm/src/: either.rs  execute.rs
crates/node/core/src/args/: pruning.rs
crates/optimism/primitives/: Cargo.toml
crates/optimism/primitives/src/: lib.rs  signed_transaction.rs
crates/optimism/rpc/src/eth/: receipt.rs
crates/primitives/src/traits/: mod.rs
crates/rpc/rpc/src/: debug.rs
examples/sentio-tracer/: Cargo.toml
examples/sentio-tracer/src/: main.rs
