[package]
name = "example-sentio-tracer"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true


[dependencies]
reth.workspace = true
reth-db.workspace = true
reth-chainspec.workspace = true
reth-node-core.workspace = true
reth-node-ethereum = { workspace = true, features = ["test-utils"] }
futures-util.workspace = true

eyre.workspace = true
tokio.workspace = true
serde_json.workspace = true

alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-rpc-types-trace.workspace = true